Always use icons with wxToolbook in the notebook sample.

wxToolbook asserts and doesn't work if it has no images so always use them
with it in the sample to avoid it.

Closes #11656.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@67201 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775